# CalcGTest

./: .gitignore  CMakeLists.txt  README.md
test/: calc_test.cpp
